--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
             --heading-color: #222;
             --item-bg: #ffffff;
             --border-color: #e0e0e0;
-            --input-bg: #f8f8f8;
+            --input-bg: #f2eee6;
             --input-text-color: #333;
             --placeholder-color: #888;
             --button-color: #555;
