--- a/index.html
+++ b/index.html
@@ -99,53 +99,57 @@
         }
 
         :root {
-            /* CAMBIO SOLICITADO 1: Fondo gris crema para modo dia */
-            --bg-color: #d4ccbc; /* Gris crema/beige elegido */
-            --text-color: #333;
-            --heading-color: #222;
-            --item-bg: #ffffff;
-            --border-color: #e0e0e0;
-            --input-bg: #f2eee6;
-            --input-text-color: #333;
-            --placeholder-color: #888;
-            --button-color: #555;
-            --button-hover-color: #e74c3c;
-            --delete-button-color: var(--button-color);
-            --delete-button-hover-color: var(--button-hover-color);
-            --completed-text-color: #999;
-            --progress-bg: #e0ffe0;
-            --progress-bar-color: #66c266;
-            --progress-bar-completed-color: #28a745;
-            --empty-list-color: #888;
-            --fixed-button-bg: #ffffff;
-            --fixed-button-border: #ccc;
-            --fixed-button-shadow: 0 2px 5px rgba(0,0,0,0.2);
-            --legend-text-color: #666;
-            --sort-button-color: #555;
-            --sort-button-hover-color: #3498db;
-            --footer-text-color: #aaa;
-            --medal-color: #ffd700;
-            --medal-text-color: var(--text-color);
-            --subtitle-color: #777;
-            --app-description-color: #555;
-            --priority-red-color: #e74c3c;
-            --priority-orange-color: #f39c12;
-            --priority-yellow-color: #f1c40f;
-            --priority-green-color: #2ecc71;
-            --priority-none-color: var(--border-color);
-            --welcome-button-bg: #e74c3c;
-            --welcome-button-text: #fff;
-            --welcome-button-hover-bg: #c0392b;
+             /* CAMBIO SOLICITADO 1: Fondo general gris crema/beige para modo dia */
+        --bg-color: #d4ccbc; /* Fondo general */
 
-            --drive-icon-color: #4285F4;
-            --accent-color: #3498db;
+        --text-color: #333;
+        --heading-color: #222;
 
-            --modal-input-background-color: var(--input-bg);
-            --modal-input-border-color: var(--border-color);
-            --schedule-link-text-color: var(--accent-color);
-            --schedule-link-hover-text-color: #2980b9;
-            --schedule-link-disabled-text-color: #7f8c8d;
-            --checkbox-checkmark-color: var(--item-bg);
+        /* NUEVO CAMBIO SOLICITADO: Fondos de elementos específicos en modo dia */
+        --item-bg: #f2eee6; /* Fondo de tareas, secciones, modales, botones de datos */
+        --border-color: #e0e0e0; /* Mantener borde original o ajustar si quieres */
+        --input-bg: #f2eee6; /* Fondo de cajas de texto */
+        --input-text-color: #333;
+        --placeholder-color: #888;
+        --button-color: #555;
+        --button-hover-color: #e74c3c;
+        --delete-button-color: var(--button-color);
+        --delete-button-hover-color: var(--button-hover-color);
+        --completed-text-color: #999;
+        --progress-bg: #e0ffe0;
+        --progress-bar-color: #66c266;
+        --progress-bar-completed-color: #28a745;
+        --empty-list-color: #888;
+        --fixed-button-bg: #f2eee6; /* Fondo de botones fijos (modo oscuro, borrar notas hover) */
+        --fixed-button-border: #ccc; /* Mantener borde original o ajustar si quieres */
+        --fixed-button-shadow: 0 2px 5px rgba(0,0,0,0.2);
+        --legend-text-color: #666;
+        --sort-button-color: #555;
+        --sort-button-hover-color: #3498db;
+        --footer-text-color: #aaa;
+        --medal-color: #ffd700;
+        --medal-text-color: var(--text-color);
+        --subtitle-color: #777;
+        --app-description-color: #555;
+        --priority-red-color: #e74c3c;
+        --priority-orange-color: #f39c12;
+        --priority-yellow-color: #f1c40f;
+        --priority-green-color: #2ecc71;
+        --priority-none-color: var(--border-color);
+        --welcome-button-bg: #e74c3c;
+        --welcome-button-text: #fff;
+        --welcome-button-hover-bg: #c0392b;
+
+        --drive-icon-color: #4285F4;
+        --accent-color: #3498db;
+
+        /* NUEVO CAMBIO SOLICITADO: Fondo de inputs en modales en modo dia */
+        --modal-input-background-color: #f2eee6; /* Fondo de inputs en modales */
+        --modal-input-border-color: var(--border-color); /* Mantener borde original o ajustar si quieres */
+        --schedule-link-text-color: var(--accent-color);
+        --schedule-link-hover-text-color: #2980b9;
+        --schedule-link-disabled-text-color: #7f8c8d;
+        --checkbox-checkmark-color: var(--item-bg); /* El checkmark usa el color del item-bg */
         }
 
         body.dark-mode {
