--- a/back.html
+++ b/back.html
@@ -99,52 +99,57 @@
         }
 
         :root {
-            --bg-color: #f4f7f6;
-            --text-color: #333;
-            --heading-color: #222;
-            --item-bg: #ffffff;
-            --border-color: #e0e0e0;
-            --input-bg: #f8f8f8;
-            --input-text-color: #333;
-            --placeholder-color: #888;
-            --button-color: #555;
-            --button-hover-color: #e74c3c;
-            --delete-button-color: var(--button-color);
-            --delete-button-hover-color: var(--button-hover-color);
-            --completed-text-color: #999;
-            --progress-bg: #e0ffe0;
-            --progress-bar-color: #66c266;
-            --progress-bar-completed-color: #28a745;
-            --empty-list-color: #888;
-            --fixed-button-bg: #ffffff;
-            --fixed-button-border: #ccc;
-            --fixed-button-shadow: 0 2px 5px rgba(0,0,0,0.2);
-            --legend-text-color: #666;
-            --sort-button-color: #555;
-            --sort-button-hover-color: #3498db;
-            --footer-text-color: #aaa;
-            --medal-color: #ffd700;
-            --medal-text-color: var(--text-color);
-            --subtitle-color: #777;
-            --app-description-color: #555;
-            --priority-red-color: #e74c3c;
-            --priority-orange-color: #f39c12;
-            --priority-yellow-color: #f1c40f;
-            --priority-green-color: #2ecc71;
-            --priority-none-color: var(--border-color);
-            --welcome-button-bg: #e74c3c;
-            --welcome-button-text: #fff;
-            --welcome-button-hover-bg: #c0392b;
+             /* CAMBIO SOLICITADO 1: Fondo general gris crema/beige para modo dia */
+        --bg-color: #d4ccbc; /* Fondo general */
 
-            --drive-icon-color: #4285F4;
-            --accent-color: #3498db;
+        --text-color: #333;
+        --heading-color: #222;
 
-            --modal-input-background-color: var(--input-bg);
-            --modal-input-border-color: var(--border-color);
-            --schedule-link-text-color: var(--accent-color);
-            --schedule-link-hover-text-color: #2980b9;
-            --schedule-link-disabled-text-color: #7f8c8d;
-            --checkbox-checkmark-color: var(--item-bg);
+        /* NUEVO CAMBIO SOLICITADO: Fondos de elementos específicos en modo dia */
+        --item-bg: #f2eee6; /* Fondo de tareas, secciones, modales, botones de datos */
+        --border-color: #e0e0e0; /* Mantener borde original o ajustar si quieres */
+        --input-bg: #f2eee6; /* Fondo de cajas de texto */
+        --input-text-color: #333;
+        --placeholder-color: #888;
+        --button-color: #555;
+        --button-hover-color: #e74c3c;
+        --delete-button-color: var(--button-color);
+        --delete-button-hover-color: var(--button-hover-color);
+        --completed-text-color: #999;
+        --progress-bg: #e0ffe0;
+        --progress-bar-color: #66c266;
+        --progress-bar-completed-color: #28a745;
+        --empty-list-color: #888;
+        --fixed-button-bg: #f2eee6; /* Fondo de botones fijos (modo oscuro, borrar notas hover) */
+        --fixed-button-border: #ccc; /* Mantener borde original o ajustar si quieres */
+        --fixed-button-shadow: 0 2px 5px rgba(0,0,0,0.2);
+        --legend-text-color: #666;
+        --sort-button-color: #555;
+        --sort-button-hover-color: #3498db;
+        --footer-text-color: #aaa;
+        --medal-color: #ffd700;
+        --medal-text-color: var(--text-color);
+        --subtitle-color: #777;
+        --app-description-color: #555;
+        --priority-red-color: #e74c3c;
+        --priority-orange-color: #f39c12;
+        --priority-yellow-color: #f1c40f;
+        --priority-green-color: #2ecc71;
+        --priority-none-color: var(--border-color);
+        --welcome-button-bg: #e74c3c;
+        --welcome-button-text: #fff;
+        --welcome-button-hover-bg: #c0392b;
+
+        --drive-icon-color: #4285F4;
+        --accent-color: #3498db;
+
+        /* NUEVO CAMBIO SOLICITADO: Fondo de inputs en modales en modo dia */
+        --modal-input-background-color: #f2eee6; /* Fondo de inputs en modales */
+        --modal-input-border-color: var(--border-color); /* Mantener borde original o ajustar si quieres */
+        --schedule-link-text-color: var(--accent-color);
+        --schedule-link-hover-text-color: #2980b9;
+        --schedule-link-disabled-text-color: #7f8c8d;
+        --checkbox-checkmark-color: var(--item-bg); /* El checkmark usa el color del item-bg */
         }
 
         body.dark-mode {
@@ -2440,10 +2445,14 @@
             deleteMainButton.addEventListener('click', () => {
                 const task = findTaskById(mainTask.id);
                 if (!task) return;
-                 if ((task.subtasks && task.subtasks.length > 0) || task.completed) {
-                     if (!confirm(`¿Seguro que quieres eliminar "${task.text}"?`)) return;
-                 }
-                deleteTodo(task.id);
+
+                // CAMBIO SOLICITADO 2: Preguntar SIEMPRE antes de eliminar una tarea principal
+                // Eliminamos la condición previa y preguntamos directamente
+                if (confirm(`¿Borramos esta tarea "${task.text}"?`)) {
+                    // Si el usuario confirma (hace clic en OK), procedemos a eliminar
+                    deleteTodo(task.id);
+                }
+                // Si el usuario cancela (hace clic en Cancelar), la función simplemente termina y no se hace nada.
             });
             taskActionsGroup.append(linkButton, googleCalendarButton, deleteMainButton);
             taskBody.append(mainTaskSpan, taskActionsGroup);
@@ -2979,7 +2988,9 @@
                      showAppInterface(); // Calls renderTodosUI internally
                 }
 
-                alert(`Datos importados exitosamente desde ${source}.`);
+                // CAMBIO SOLICITADO 2: Aviso y recarga automática después de importar
+                alert(`Datos importados exitosamente desde ${source}. La página se recargará para aplicar los cambios.`);
+                window.location.reload(); // Forzar recarga para asegurar que todo el estado se actualice
 
             } catch (error) {
                 console.error(`Error al procesar datos importados desde ${source}:`, error);
