--- a/index.html
+++ b/index.html
@@ -1913,7 +1913,7 @@
                 <li><strong>Marcar como Completada:</strong> Haz clic en el círculo a la izquierda de la tarea. ¡Ganas una medalla <i class="fas fa-medal"></i> por cada tarea completada en el día! El contador "Total Score" aumenta con cada tarea completada históricamente.</li>
                 <li><strong>Prioridad:</strong> Haz clic en el cuadrado de color junto al círculo para cambiar la prioridad de la tarea (Rojo: Urgente &gt; Naranja: Alta &gt; Amarillo: No Olvidar &gt; Verde: Puede Esperar &gt; Gris: Sin prioridad).</li>
                 <li><strong>Agendar Recordatorio de Tarea:</strong> Haz clic en el icono de calendario <i class="far fa-calendar-plus"></i> en una tarea para enviar un recordatorio de esa tarea específica a tu Google Calendar.</li>
-                <li><strong>¡No Olvides lo Importante!:</strong> Usa la sección dedicada para crear eventos (únicos o recurrentes, como recordatorios de pastillas) directamente en tu Google Calendar.</li>
+                <li><strong>¡No Olvides lo Importante!:</strong> Usa la sección dedicada para crear eventos (únicos o recurrentes) directamente en tu Google Calendar.</li>
                 <li><strong>Enlaces:</strong> Haz clic en el icono de enlace <i class="fas fa-link"></i> para añadir o abrir un enlace web asociado a la tarea.</li>
                 <li><strong>Sub-Tareas:</strong>
                     <ul>
